--- a/meta/src/App.css
+++ b/meta/src/App.css
@@ -44,7 +44,6 @@
   justify-content: space-between;
   width: 50%;
   margin: auto;
-  
 }
 
 .btn {
@@ -68,8 +67,26 @@
   background-color: rgb(197, 61, 61);
   margin-bottom: 10px; /* Add margin for better spacing on small screens */
 }
+.h1_file{
+  color: #ffff;
+  font-weight: 800;
+  font-family: "Lobster Two", cursive;
+  position: relative;
 
-/* Responsive adjustments for smaller screens */
+  text-transform: uppercase;
+  font-size: 2.6em;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, hsla(327, 100%, 76%, 1), orange, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  /* animation: animate 3s linear infinite; */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+
+  background-color: orange;
+ 
+}
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
@@ -78,6 +95,5 @@
   .button-div {
     width: 80%;
     margin: auto;
-
   }
 }
